[not verified] Fixes colors for contrast and bright.

--- a/projects/plugins/jetpack/modules/masterbar/admin-color-schemes/colors/classic-bright/colors.scss
+++ b/projects/plugins/jetpack/modules/masterbar/admin-color-schemes/colors/classic-bright/colors.scss
@@ -42,10 +42,14 @@ $color-surface: $studio-white; // Calypso --color-surface
 $color-neutral-100-rgb: $studio-gray-100-rgb; // Calypso --color-neutral-100-rgb
 
 // Sidebar Nudges
-$menu-nudge-background: $studio-black;
+$menu-nudge-background: $studio-gray-80;
 $menu-nudge-text-color: $studio-white;
 $menu-nudge-cta-background: $highlight-color;
 $menu-nudge-cta-color: $studio-white;
 $menu-nudge-cta-background-hover: $studio-pink-60;
+
+.folded #adminmenu .toplevel_page_site-notices .wp-menu-image {
+	background-color: $studio-gray-80 !important;
+}
 
 @import "../admin";
